Added level 1 heading
Changed the name to an h1, for easier page navigation and better SEO.

Signed-off-by: Aashish15 <techybeing@gmail.com>

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Aashish Toshniwal</span>
+                        <h1 class="name">Aashish Toshniwal</h1>
                         <hr class="star-light">
                         <span class="skills">Android Developer - Engineering Student - TechGeek</span>
                     </div>
